@@ -1,10 +1,20 @@
 [Desktop Entry]
-Type=DUIApplet
+Type=ControlPanelApplet
 Name=Skeleton
 Icon=
 Exec=
 X-logical-id=qtn_sett_main_display
 X-translation-catalog=skeletonapplet1,skeletonapplet2
+
+# This has to be specified in order that the .desktop file can also be
+# used as an action (for example for search to know how to
+# open the applet)
+X-Maemo-Service=com.nokia.DuiControlPanel
+X-Maemo-Method=com.nokia.DuiControlPanelIf.appletPage
+X-Maemo-Object-Path=/
+# this has to be the same as Name
+X-Maemo-Fixed-Args=Skeleton
+
 
 [DUI]
 X-DUIApplet-Applet=libdcpskeletonapplet.so
