@@ -1,10 +1,18 @@
 [Desktop Entry]
-Type=DUIApplet
+Type=ControlPanelApplet
 Name=Declarative Example 1
 X-logical-id=decl_exampl_1
 X-translation-catalog=duisettings
 Icon=
-Exec=
+
+# This has to be specified in order that the .desktop file can also be
+# used as an action (for example for search to know how to
+# open the applet)
+X-Maemo-Service=com.nokia.DuiControlPanel
+X-Maemo-Method=com.nokia.DuiControlPanelIf.appletPage
+X-Maemo-Object-Path=/
+# this has to be the same as Name
+X-Maemo-Fixed-Args=Declarative Example 1
 
 [DUI]
 X-DUIApplet-Applet=libdeclarative.so
